--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "symfony/validator": "6.3.*",
         "symfony/web-link": "6.3.*",
         "symfony/yaml": "6.3.*",
-        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/extra-bundle": "^3.6",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
