--- a/config/packages/validator.yaml
+++ b/config/packages/validator.yaml
@@ -3,7 +3,7 @@ framework:
         email_validation_mode: html5
 
         # Enables validator auto-mapping support.
-        # For instance, basic validation constraints will be inferred from Doctrine's metadata.
+        # For instance, basic validation Constraints will be inferred from Doctrine's metadata.
         #auto_mapping:
         #    App\Entity\: []
 
