--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "pestphp/pest-plugin": true
         },
         "sort-packages": true
     },
@@ -90,6 +91,7 @@
         }
     },
     "require-dev": {
+        "pestphp/pest": "^1.23",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "6.3.*",
