--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,6 +21,9 @@
         <testsuite name="Unit">
             <directory suffix=".php">./tests/Unit</directory>
         </testsuite>
+        <testsuite name="Functional">
+            <directory suffix=".php">./tests/Functional</directory>
+        </testsuite>
     </testsuites>
 
     <coverage processUncoveredFiles="true">
