--- a/composer.json
+++ b/composer.json
@@ -91,6 +91,7 @@
         }
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^7.2",
         "pestphp/pest": "^1.23",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^9.5",
